--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
-cmake_minimum_required(VERSION 3.22)
+cmake_minimum_required(VERSION 3.19)
 project(otel)
+
+set (CMAKE_CXX_STANDARD 20)
+
 
 find_program(CCACHE_PROGRAM ccache)
 if(CCACHE_PROGRAM)
@@ -11,6 +14,7 @@ add_compile_options(-Wall)
 #add_compile_options(-Werror)
 add_compile_options(-pedantic)
 add_compile_options(-Wextra)
+add_compile_options(-std=c++20)
 
 find_package(CURL REQUIRED)
 find_package(opentelemetry-cpp REQUIRED)
@@ -18,6 +22,7 @@ find_package(nlohmann_json REQUIRED)
 find_package(protobuf CONFIG REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
 find_package(re2 CONFIG REQUIRED)
+find_package(Boost COMPONENTS filesystem system unit_test_framework program_options REQUIRED)
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -25,30 +30,15 @@ add_compile_options(-Wno-unused-parameter)
 
 include_directories(. src)
 
+add_subdirectory(src/libMetrics)
+
 set_target_properties(opentelemetry-cpp::opentelemetry_exporter_prometheus PROPERTIES
         INTERFACE_LINK_LIBRARIES "opentelemetry-cpp::metrics"
         )
 
-add_executable(otel main.cpp src/libUtils/Metrics.cpp src/libUtils/Tracing.cpp src/libUtils/Metrics.h src/libUtils/Tracing.h)
+add_executable(otel main.cpp src/libUtils/Logger.h)
 
-target_link_libraries(otel
-        INTERFACE
-        Threads::Threads
-        CURL::libcurl
-        PUBLIC
-        opentelemetry-cpp::api
-        opentelemetry-cpp::sdk
-        opentelemetry-cpp::logs
-        opentelemetry-cpp::trace
-        opentelemetry-cpp::ostream_span_exporter
-        opentelemetry-cpp::ostream_metrics_exporter
-        opentelemetry-cpp::otlp_http_metric_exporter
-        opentelemetry-cpp::otlp_grpc_metrics_exporter
-        opentelemetry-cpp::otlp_http_exporter
-        opentelemetry-cpp::otlp_grpc_exporter
-        opentelemetry-cpp::opentelemetry_exporter_prometheus
-        gRPC::grpc++
-        )
+target_link_libraries(otel PUBLIC Metrics )
 
 message(STATUS "We are on a ${CMAKE_SYSTEM_NAME} system")
 
