Moved test routines to gtest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,6 @@ project(otel)
 
 set (CMAKE_CXX_STANDARD 20)
 
-include(FetchContent)
-FetchContent_Declare(
-        googletest
-        URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-)
-
-FetchContent_MakeAvailable(googletest)
-
 find_program(CCACHE_PROGRAM ccache)
 if(CCACHE_PROGRAM)
     message(STATUS "Found ccache")
@@ -38,23 +30,11 @@ add_compile_options(-DWITH_STL=ON -Wno-unused-parameter)
 include_directories(. src ${OPENTELEMETRY_CPP_INCLUDE_DIRS})
 
 add_subdirectory(src/libMetrics)
+add_subdirectory(trace)
 
 
-enable_testing()
+#add_subdirectory(testing)
 
-add_executable(
-        test_api
-        Test.cpp
-        Test.cpp src/common/Constants.h)
-target_link_libraries(
-        test_api
-        Metrics
-        GTest::gtest_main
-)
-target_include_directories(test_api PUBLIC ${PROJECT_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/src ${CURL_INCLUDE_DIRS} ${OPENTELEMETRY_CPP_INCLUDE_DIRS})
-
-include(GoogleTest)
-gtest_discover_tests(test_api)
 
 message(STATUS "We are on a ${CMAKE_SYSTEM_NAME} system")
 
