--- a/trace/CMakeLists.txt
+++ b/trace/CMakeLists.txt
@@ -1,3 +1,27 @@
+set (CMAKE_CXX_STANDARD 20)
+
+find_program(CCACHE_PROGRAM ccache)
+if(CCACHE_PROGRAM)
+    message(STATUS "Found ccache")
+    set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "${CCACHE_PROGRAM}")
+endif()
+
+add_compile_options(-Wall)
+#add_compile_options(-Werror)
+add_compile_options(-pedantic)
+add_compile_options(-Wextra)
+add_compile_options(-std=c++20)
+
+find_package(CURL REQUIRED)
+find_package(opentelemetry-cpp REQUIRED)
+find_package(nlohmann_json REQUIRED)
+find_package(protobuf CONFIG REQUIRED)
+find_package(gRPC CONFIG REQUIRED)
+find_package(re2 CONFIG REQUIRED)
+find_package(Boost COMPONENTS filesystem system unit_test_framework program_options REQUIRED)
+
+add_compile_options(-DWITH_STL=ON -Wno-unused-parameter)
+
 link_directories(${CMAKE_BINARY_DIR}/lib)
 
 add_compile_options(-DWITH_STL=ON)
