--- a/src/libMetrics/CMakeLists.txt
+++ b/src/libMetrics/CMakeLists.txt
@@ -2,12 +2,13 @@ find_package(CURL REQUIRED)
 find_package(opentelemetry-cpp REQUIRED)
 find_package(nlohmann_json REQUIRED)
 find_package(protobuf CONFIG REQUIRED)
+find_package(prometheus-cpp CONFIG REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
 find_package(re2 CONFIG REQUIRED)
 
 
 
-set_target_properties(opentelemetry-cpp::opentelemetry_exporter_prometheus PROPERTIES
+set_target_properties(opentelemetry-cpp::prometheus_exporter PROPERTIES
         INTERFACE_LINK_LIBRARIES "opentelemetry-cpp::metrics"
         )
 
@@ -28,9 +29,8 @@ target_link_libraries(Metrics
         opentelemetry-cpp::ostream_metrics_exporter
         opentelemetry-cpp::otlp_http_metric_exporter
         opentelemetry-cpp::otlp_http_exporter
-        opentelemetry-cpp::opentelemetry_exporter_prometheus
+        opentelemetry-cpp::prometheus_exporter
         opentelemetry-cpp::otlp_grpc_metrics_exporter
         opentelemetry-cpp::otlp_grpc_exporter
         PRIVATE
         Boost::filesystem)
-
