--- a/trace/CMakeLists.txt
+++ b/trace/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(nlohmann_json REQUIRED)
 find_package(protobuf CONFIG REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
 find_package(re2 CONFIG REQUIRED)
-find_package(Boost COMPONENTS filesystem system unit_test_framework program_options REQUIRED)
+
 
 add_compile_options(-DWITH_STL=ON -Wno-unused-parameter)
 
@@ -26,9 +26,9 @@ add_compile_options(-DWITH_STL=ON)
 
 add_executable(client client.cpp)
 target_include_directories(client PUBLIC ${CMAKE_SOURCE_DIR}/src)
-target_link_libraries(client PUBLIC Metrics Boost::program_options)
+target_link_libraries(client PUBLIC Metrics )
 
 
 add_executable(server server.cpp)
 target_include_directories(server PUBLIC ${CMAKE_SOURCE_DIR}/src)
-target_link_libraries(server PUBLIC Metrics Boost::program_options)
+target_link_libraries(server PUBLIC Metrics )
