Cleaned up on the Mac, no warnings now and one simple cmakefile for all projects.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ find_package(nlohmann_json REQUIRED)
 find_package(protobuf CONFIG REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
 find_package(re2 CONFIG REQUIRED)
+find_package(GTest CONFIG REQUIRED)
 
 
 include_directories(. src ${OPENTELEMETRY_CPP_INCLUDE_DIRS})
