--- a/src/libMetrics/CMakeLists.txt
+++ b/src/libMetrics/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(protobuf CONFIG REQUIRED)
 find_package(prometheus-cpp CONFIG REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
 find_package(re2 CONFIG REQUIRED)
+find_package(boost CONFIG REQUIRED)
 
 
 
