--- a/src/libMetrics/CMakeLists.txt
+++ b/src/libMetrics/CMakeLists.txt
@@ -7,29 +7,27 @@ find_package(gRPC CONFIG REQUIRED)
 find_package(re2 CONFIG REQUIRED)
 
 
-
-
 set_target_properties(opentelemetry-cpp::prometheus_exporter PROPERTIES
-        INTERFACE_LINK_LIBRARIES "opentelemetry-cpp::metrics"
-        )
+    INTERFACE_LINK_LIBRARIES "opentelemetry-cpp::metrics"
+    )
 
-add_library(Metrics Metrics.cpp Tracing.cpp Api.h Metrics.h Tracing.h Common.h internal/mixins.h Helper.cpp Helper.h Logger.cpp)
+add_library(Metrics Metrics.cpp Tracing.cpp Api.h Metrics.h Tracing.h Common.h internal/mixins.h Helper.cpp Helper.h Logger.cpp Tracing2.cpp)
 
 target_include_directories(Metrics PUBLIC ${PROJECT_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/src ${CURL_INCLUDE_DIRS})
 target_link_libraries(Metrics
-        INTERFACE
-        Threads::Threads
-        CURL::libcurl
-        PUBLIC
-        protobuf::libprotobuf
-        opentelemetry-cpp::api
-        opentelemetry-cpp::sdk
-        opentelemetry-cpp::logs
-        opentelemetry-cpp::trace
-        opentelemetry-cpp::ostream_span_exporter
-        opentelemetry-cpp::ostream_metrics_exporter
-        opentelemetry-cpp::otlp_http_metric_exporter
-        opentelemetry-cpp::otlp_http_exporter
-        opentelemetry-cpp::prometheus_exporter
-        opentelemetry-cpp::otlp_grpc_metrics_exporter
-        opentelemetry-cpp::otlp_grpc_exporter)
+    INTERFACE
+    Threads::Threads
+    CURL::libcurl
+    PUBLIC
+    protobuf::libprotobuf
+    opentelemetry-cpp::api
+    opentelemetry-cpp::sdk
+    opentelemetry-cpp::logs
+    opentelemetry-cpp::trace
+    opentelemetry-cpp::ostream_span_exporter
+    opentelemetry-cpp::ostream_metrics_exporter
+    opentelemetry-cpp::otlp_http_metric_exporter
+    opentelemetry-cpp::otlp_http_exporter
+    opentelemetry-cpp::prometheus_exporter
+    opentelemetry-cpp::otlp_grpc_metrics_exporter
+    opentelemetry-cpp::otlp_grpc_exporter)
